fix(label): gap between label and input

--- a/src/docs/components/docs-btn-search/docs-btn-search.css
+++ b/src/docs/components/docs-btn-search/docs-btn-search.css
@@ -31,13 +31,14 @@
   display: flex;
   align-items: center;
   appearance: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   background-color: transparent;
   cursor: pointer;
   border: 0;
   padding: 0;
   color: inherit;
   width: 100%;
+  font: var(--ld-typo-body-s);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .docs-btn-search__magnifier {
