--- a/src/docs/layouts/docs-layout/docs-layout.css
+++ b/src/docs/layouts/docs-layout/docs-layout.css
@@ -1,5 +1,6 @@
 body {
   overscroll-behavior-x: none;
+  -webkit-text-size-adjust: none;
 }
 
 .docs-main {
